--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 		<slf4j.version>1.7.5</slf4j.version>
 	</properties>
 	<dependencies>
+		<!-- App monitoring -->
+		<dependency>
+			<groupId>net.bull.javamelody</groupId>
+			<artifactId>javamelody-core</artifactId>
+			<version>1.69.0</version>
+		</dependency>
 		<!-- JAX-RS -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
