--- a/docker/tomcat/config.yaml
+++ b/docker/tomcat/config.yaml
@@ -11,21 +11,19 @@ queries:
         PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
         SELECT ?artefact ?artefactId ?artefactType ?artefactName
         WHERE {
-            GRAPH <http://localhost:8383/MiCorrDS/data/MiCorrGraph> {
-                {
-                    ?artefact a ?artefactType .
-                    ?artefact rdfs:label "%text%" .
-                    BIND(IRI(CONCAT(STR(?artefactType), "_id")) AS ?iriConcat)
-                    BIND("%text%" AS ?artefactName)
-                    ?artefact ?iriConcat ?artefactId .
-                    FILTER( STRSTARTS(str(?artefactType), "http://micorr.ig.he-arc.ch/vocab") )
-                } UNION {
-                    ?artefact a ?artefactType .
-                    ?artefact rdfs:label "%text%" .
-                    bind ( COALESCE(?artefactId, "0") As ?artefactId) .
-                    BIND("%text%" AS ?artefactName) .
-                    FILTER( STRSTARTS(str(?artefactType), "http://www.w3.org/2002/07/owl") )
-                }
+            {
+                ?artefact a ?artefactType .
+                ?artefact rdfs:label "%text%" .
+                BIND(IRI(CONCAT(STR(?artefactType), "_id")) AS ?iriConcat)
+                BIND("%text%" AS ?artefactName)
+                ?artefact ?iriConcat ?artefactId .
+                FILTER( STRSTARTS(str(?artefactType), "http://micorr.ig.he-arc.ch/vocab") )
+            } UNION {
+                ?artefact a ?artefactType .
+                ?artefact rdfs:label "%text%" .
+                bind ( COALESCE(?artefactId, "0") As ?artefactId) .
+                BIND("%text%" AS ?artefactName) .
+                FILTER( STRSTARTS(str(?artefactType), "http://www.w3.org/2002/07/owl#Class") )
             }
         }
     query2: >
@@ -38,16 +36,14 @@ queries:
 
         SELECT ?labelSister ?labelParent
         WHERE {
-            GRAPH <http://localhost:8383/MiCorrDS/data/MiCorrGraph> {
-                {
-                    ?artefact a vocab:%text% .
-                    ?artefact rdfs:label ?labelSister .
-                    vocab:%text% rdfs:label ?labelParent .
-                } UNION {
-                    ?artefact a owl:%text% .
-                    ?artefact rdfs:label ?labelSister .
-                    BIND(COALESCE(?labelParent, "Thing") AS ?labelParent) .
-                }
+            {
+                ?artefact a vocab:%text% .
+                ?artefact rdfs:label ?labelSister .
+                vocab:%text% rdfs:label ?labelParent .
+            } UNION {
+                ?artefact a owl:%text% .
+                ?artefact rdfs:label ?labelSister .
+                BIND(COALESCE(?labelParent, "Thing") AS ?labelParent) .
             }
         }
     query3: >
@@ -60,28 +56,26 @@ queries:
 
         SELECT ?labelAssertion
         WHERE {
-            GRAPH <http://localhost:8383/MiCorrDS/data/MiCorrGraph> {
-                {
-                    ?artefact rdfs:label "%text%" .
-                    ?artefact ont:isLinkedTo ?linkedTo .
-                    ?linkedTo rdfs:label ?labelAssertion .
-                } UNION {
-                    ?artefact rdfs:label "%text%" .
-                    ?artefact ont:resultsFromTechnology ?resFromTechno .
-                    ?resFromTechno rdfs:label ?labelAssertion
-                } UNION {
-                    ?artefact rdfs:label "%text%" .
-                    ?artefact ont:correspondsToCorrosionForm ?resFromTechno .
-                    ?resFromTechno rdfs:label ?labelAssertion
-                } UNION {
-                    ?artefact rdfs:label "%text%" .
-                    ?artefact ont:isFoundInCorrosionType ?resFromTechno .
-                    ?resFromTechno rdfs:label ?labelAssertion
-                } UNION {
-                    ?artefact rdfs:label "%text%" .
-                    ?artefact ont:takesPlaceInChronologyCategory ?resFromTechno .
-                    ?resFromTechno rdfs:label ?labelAssertion
-                }
+            {
+                ?artefact rdfs:label "%text%" .
+                ?artefact ont:isLinkedTo ?linkedTo .
+                ?linkedTo rdfs:label ?labelAssertion .
+            } UNION {
+                ?artefact rdfs:label "%text%" .
+                ?artefact ont:resultsFromTechnology ?resFromTechno .
+                ?resFromTechno rdfs:label ?labelAssertion
+            } UNION {
+                ?artefact rdfs:label "%text%" .
+                ?artefact ont:correspondsToCorrosionForm ?resFromTechno .
+                ?resFromTechno rdfs:label ?labelAssertion
+            } UNION {
+                ?artefact rdfs:label "%text%" .
+                ?artefact ont:isFoundInCorrosionType ?resFromTechno .
+                ?resFromTechno rdfs:label ?labelAssertion
+            } UNION {
+                ?artefact rdfs:label "%text%" .
+                ?artefact ont:takesPlaceInChronologyCategory ?resFromTechno .
+                ?resFromTechno rdfs:label ?labelAssertion
             }
         }
     query4: >
@@ -90,8 +84,6 @@ queries:
 
         SELECT ?labelChild
         WHERE {
-            GRAPH <http://localhost:8383/MiCorrDS/data/MiCorrGraph> {
-                ?artefact a vocab:%text% .
-                ?artefact rdfs:label ?labelChild
-            }
+            ?artefact a vocab:%text% .
+            ?artefact rdfs:label ?labelChild
         }
